[package]
name = "hltas_cleaner"
version = "1.0.1"
edition = "2018"
description = "Utilities for cleaning a hltas object."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hltas = { git = "https://github.com/HLTAS/hltas", branch = "master" }