[package]
name = "hltas_cleaner"
authors = [ "yuu0141 <eddio0141@gmail.com>" ]
version = "2.1.0"
edition = "2018"
description = "Utilities for cleaning a hltas object"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hltas = "0.5.0"
clap = { version = "3.0.0", features = ["derive"] }
